--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         border: 1px solid;
       }
     </style>
+    <link href="bitstarter.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
