--- a/index.html
+++ b/index.html
@@ -14,67 +14,10 @@
     <!-- MAC: bootstrap.min.css before bootstrap-responsive.min.css -->
     <link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap-responsive.min.css">
+    <link type="text/css" rel="stylesheet" href="assets/bitstarter.css">
 
 
-    <style type="text/css">
 
-      /* MAC: */
-      /* Large desktop */
-      @media (min-width: 980px) {
-        body {
-         padding-top: 60px;
-        }
-       .linediv-l {
-         border-right: 1px white solid;
-        }
-       .linediv-r {
-         border-left: 1px white solid;
-       }
-      }
-
-      /* Landscape phones and down */
-      @media (max-width: 480px) {
-       .copy {
-         padding: 2.5% 10%;
-       }
-       .linediv-l {
-         border-bottom: 1px white solid;
-       }
-       .linediv-r {
-         border-top: 1px white solid;
-       }
-      }
-
-      /* All form factors */
-
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-      p.lead {
-        padding-top: 15px;
-      }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
-        text-align: center;
-      }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row-fluid {
-        border: 1px solid;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
