--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <!-- MAC: to setup responsive desing -->
+    <!-- MAC: to setup responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--   Previous code: -->
